changed font sizes to em units, fixing #3 and edited heading css and line spacing to fix #2

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,7 @@ End variables
 html {
   background-color: $footer-bg;
   font-family: Ubuntu, Verdana, Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 1em;
   font-color: $Cool-Grey;
 }
 body {
@@ -38,8 +38,9 @@ body {
 
   .info {
     .info-text {
-      font-size:larger;
+      font-size:1em;
       color:#ddd !important;
+      line-height:1.1em;
     }
     padding: 10px;
     background-color:$footer-bg !important;
@@ -51,7 +52,7 @@ body {
     .links {
       text-align:center; 
       padding:5px;
-      font-size:larger;
+      font-size:1em;
       color:#ddd !important;
       a {
         color: #FFF !important;
@@ -62,7 +63,7 @@ body {
 
 #main { 
   .main_content {
-    padding: 10px;
+    padding: 1.5em;
 
     h1 {
       margin-bottom:20px;
@@ -140,38 +141,6 @@ div {
   padding: 4px;
 }
 
-// .fieldWithErrors {
-//   display: inline;
-
-//   .error_messages {
-//     width: 400px;
-//     border: 2px solid #CF0000;
-//     padding: 0px;
-//     padding-bottom: 12px;
-//     margin-bottom: 20px;
-//     background-color: #f0f0f0;
-//     font-size: 12px;
-//   }
-
-//   .error_messages h2 {
-//     text-align: left;
-//     font-weight: bold;
-//     padding: 5px 10px;
-//     font-size: 12px;
-//     margin: 0;
-//     background-color: #c00;
-//     color: #fff;
-//   }
-
-//   .error_messages p {
-//     margin: 8px 10px;
-//   }
-
-//   .error_messages ul {
-//     margin: 0;
-//   }
-// }
-
 .field_with_errors {
   padding: 2px;
   background-color: red;
@@ -189,7 +158,7 @@ div {
       text-align: left;
       font-weight: bold;
       padding: 5px 5px 5px 15px;
-      font-size: 12px;
+      font-size: 1.2em;
       margin: -7px;
       margin-bottom: 0px;
       background-color: #c00;
@@ -197,7 +166,7 @@ div {
     }
 
     ul li {
-      font-size: 12px;
+      font-size: 1.2em;
       list-style: square; 
     } 
   }
@@ -208,7 +177,7 @@ div {
 }
 
 .tweet {
-  font-size:10px;
+  font-size: 0.75em;
   padding: 10px;
   margin-bottom:10px;
 
@@ -246,7 +215,7 @@ div {
     }
 
     .quotes {
-      font-size:larger;
+      font-size:1.2em;
       font-weight:bold;
     }  
   }
