--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -54,10 +54,9 @@
 }
 
 .author {
+  font-size:0.8em;
   float:right;
-  margin-right:10px;
-  margin-top:-10px;
-  //background-color:rgba(182,212,250,0.3);
+  margin-top: 5px;
   padding:15px;
 }
 
