--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -21,9 +21,36 @@
 
 @sansFontFamily: Ubuntu, Verdana, Helvetica, Arial, sans-serif;
 
+@baseLineHeight: 1.3em;
+@baseFontSize: 1em;
+
 .thumbnails {
   text-align:center;
 }
 textarea {
   width: 90%;
+}
+
+.main_content {
+  p {
+    line-height:1.5em;
+    margin-top:0.75em;
+  }
+
+  h1,h2,h3,h4,h5,h6 {
+  font-weight:normal;
+  color:#111;
+  line-height:1em;
+  }
+  h2,h3,h4,h5,h6 {
+    margin-top: 1em;
+  }
+
+  h4,h5,h6{ font-weight: bold; }
+  h1{ font-size:2.5em; }
+  h2{ font-size:2em; border-bottom:1px solid #ccc; padding-bottom: 5px; }
+  h3{ font-size:1.5em; }
+  h4{ font-size:1.2em; }
+  h5{ font-size:1em; }
+  h6{ font-size:0.9em; }
 }
