--- a/app/assets/stylesheets/paginator.css.scss
+++ b/app/assets/stylesheets/paginator.css.scss
@@ -7,7 +7,7 @@ Modified by: Peter Mellett
 */
 
 .paginator {
-  font-size: 11px;
+  font-size: 0.8em;
   font-family: Tahoma, Arial, Helvetica, Sans-serif;
   background-color:#3e3e3e;
   color: #fff;
